<resources>
    <string name="exit">Exit</string>
    <string name="leave">Leave</string>
    <string name="error">Error</string>
    <string name="app_info">App info</string>
    <string name="call_directly">Call directly</string>
    <string name="message_directly">Message directly</string>
    <string name="create">Create</string>
    <string name="none">None</string>
    <string name="overwrite">Overwrite</string>
    <string name="local_time">Local time</string>
    <string name="notes">Notes</string>
    <string name="check">check</string>
    <string name="uncheck">uncheck</string>
    <string name="checked">checked</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="request_note_folder">Press to select a folder for notes</string>
    <string name="request_todo_file">Press to select a file for tasks</string>
    <string name="heads">Heads!</string>
    <string name="tails">Tails!</string>
    <plurals name="celsius">
        <item quantity="one">%s degree Celsius</item>
        <item quantity="other">%s degrees Celsius</item>
    </plurals>
    <plurals name="fahrenheit">
        <item quantity="one">%s degree Fahrenheit</item>
        <item quantity="other">%s degrees Fahrenheit</item>
    </plurals>
    <plurals name="kelvin">
        <item quantity="other">%s Kelvin</item>
    </plurals>
    <string name="celsius_conversion">%1$s degrees %2$s is %3$s degrees Celsius.</string>
    <string name="fahrenheit_conversion">%1$s degrees %2$s is %3$s degrees Fahrenheit.</string>
    <string name="app_name">Emilla</string>
    <string name="title_assistant">Assistant</string>
    <string name="ping_channel_command" translatable="false">@string/header_commands</string>
    <string name="channel_desc_command">Notifications from commands.</string>
    <string name="ping_channel_pomodoro_start">Pomodoro Started</string>
    <string name="channel_desc_pomodoro_start">Fired when a Pomodoro has started.</string>
    <string name="ping_channel_pomodoro_warn">Pomodoro Warning</string>
    <string name="channel_desc_pomodoro_warn">Fired when a Pomodoro is about to end.</string>
    <string name="ping_channel_pomodoro_end" translatable="false">@string/ping_pomodoro_over</string>
    <string name="channel_desc_pomodoro_end">Fired when a Pomodoro has finished.</string>
    <string name="ping_channel_pomodoro_break_start">Pomodoro Break Started</string>
    <string name="channel_desc_pomodoro_break_start">Fired when a Pomodoro break has started.</string>
    <string name="ping_channel_pomodoro_break_warn">Pomodoro Break Warning</string>
    <string name="channel_desc_pomodoro_break_warn">Fired when a Pomodoro break is about to end.</string>
    <string name="ping_channel_pomodoro_break_end" translatable="false">@string/ping_pomodoro_break_over</string>
    <string name="channel_desc_pomodoro_break_end">Fired when a Pomodoro break has finished.</string>
    <string name="ping_command">Emilla Notifier</string>
    <string name="ping_pomodoro">Pomodoro</string>
    <string name="ping_pomodoro_text">You got it!</string>
    <string name="ping_pomodoro_warn_text">A minute remains.</string>
    <string name="ping_pomodoro_over">Pomodoro Over</string>
    <string name="ping_pomodoro_break">Pomodoro Break</string>
    <string name="ping_pomodoro_break_text">Take a breather :)</string>
    <string name="ping_pomodoro_break_over">Pomodoro Break Over</string>
    <string name="field_command">Command</string>
    <string name="field_subject">Subject</string>
    <string name="field_location">Location</string>
    <string name="field_url">URL</string>
    <string name="action_none">No action</string>
    <string name="action_desc_none">Do nothing</string>
    <string name="action_help">Help</string>
    <string name="action_desc_help">View command manual</string>
    <string name="action_flashlight">Flashlight</string>
    <string name="action_desc_flashlight">Toggle the flashlight</string>
    <string name="action_assistant_settings">Assistant settings</string>
    <string name="action_desc_assistant_settings">Open assistant settings</string>
    <string name="action_select_all">@android:string/selectAll</string>
    <string name="action_desc_select_all">Select all text</string>
    <string name="action_cursor_start">Cursor start</string>
    <string name="action_desc_cursor_start">Move the caret to the start of the edit box</string>
    <string name="action_play_pause">Play/pause</string>
    <string name="action_desc_play_pause">Toggle media playback</string>
    <string name="action_attach_files">Attach</string>
    <string name="action_desc_attach_files">Attach files</string>
    <string name="action_attach_media">Media</string>
    <string name="action_desc_attach_media">Attach media</string>
    <string name="action_toggle_field">Toggle %s field</string>
    <string name="action_desc_toggle_field">Toggle the %s field</string>
    <string name="spoken_description_submit_command">Submit command</string>
    <string name="spoken_description_empty_space">Empty space</string>
    <string name="spoken_description_show_data">Show data field</string>
    <string name="spoken_description_hide_data">Hide data field</string>
    <string name="welcome_message">Hello!</string>
    <string name="header_behavior">Behavior</string>
    <string name="header_commands">Commands</string>
    <string name="header_layout">Layout</string>
    <string name="header_system">System</string>
    <string name="pref_favorites">Favorite commands</string>
    <string name="smry_favorites">Shortcuts for your favorite actions</string>
    <string name="pref_always_show_data">Always show data field</string>
    <string name="pref_pomo_default_work">Default Pomodoro work memo</string>
    <string name="pref_pomo_default_break">Default Pomodoro break memo</string>
    <string name="pref_sounds">Sounds</string>
    <string name="sound_set_nebula">Nebula</string>
    <string name="sound_set_voice_dialer">Redial</string>
    <string name="sound_set_custom">Custom</string>
    <string name="chime_start">Start</string>
    <string name="chime_act">Action</string>
    <string name="chime_pend">Pending</string>
    <string name="chime_resume">Resume</string>
    <string name="chime_exit">Exit</string>
    <string name="chime_succeed">Succeed</string>
    <string name="chime_fail">Fail</string>
    <string name="pref_action_no_command">No command</string>
    <string name="pref_action_double_assist">"Second 'assist'"</string>
    <string name="pref_action_long_submit">Long-press submit</string>
    <string name="pref_action_menu">Menu key</string>
    <string name="pref_motd">Welcome message</string>
    <string name="pref_default_assistant">Default assistant</string>
    <string name="pref_accessibility_button">Accessibility button</string>
    <string name="accessibility_service_description">Launch assistant with a navigation shortcut</string>
    <string name="pref_notifications" translatable="false">@string/perm_notifications</string>
    <string name="summary_app_info">Permissions, etc.</string>
    <string name="category_core">Core</string>
    <string name="category_apps">Apps</string>
    <string name="category_custom">Custom</string>
    <string name="command_default">Default command</string>
    <string name="command_duplicate">Duplicate command</string>
    <string name="command_web">Web</string>
    <string name="command_launch">Launch</string>
    <string name="command_play">Play</string>
    <string name="command_pause">Pause</string>
    <string name="command_find">Find</string>
    <string name="command_call">Call</string>
    <string name="command_dial">Dial</string>
    <string name="command_sms">SMS</string>
    <string name="command_contact">Contact</string>
    <string name="command_email">Email</string>
    <string name="command_navigate">Navigate</string>
    <string name="command_calculate">Calculate</string>
    <string name="command_celsius">Celsius</string>
    <string name="command_fahrenheit">Fahrenheit</string>
    <string name="command_roll">Roll</string>
    <string name="command_bits">Bits</string>
    <string name="command_weather">Weather</string>
    <string name="command_time">Time</string>
    <string name="command_alarm">Alarm</string>
    <string name="command_timer">Timer</string>
    <string name="command_note">Note</string>
    <string name="command_schedule">Schedule</string>
    <string name="command_notify">Notify</string>
    <string name="command_setting">Setting</string>
    <string name="command_copy" translatable="false">@android:string/copy</string>
    <string name="command_snippets">Snippets</string>
    <string name="command_share">Share</string>
    <string name="command_torch">Torch</string>
    <string name="command_info">Info</string>
    <string name="command_notifications">Notifications</string>
    <string name="command_uninstall">Uninstall</string>
    <string name="command_toast">Toast</string>
    <string name="command_todo">To-do</string>
    <string name="command_pomodoro">Pomodoro</string>
    <string name="command_custom">Custom</string>
    <string name="instruction_web">search or URL</string>
    <string name="instruction_play">media</string>
    <string name="instruction_pause">pauses media</string>
    <string name="instruction_find">file or folder</string>
    <string name="instruction_dial">number or phoneword</string>
    <string name="instruction_contact">person</string>
    <string name="instruction_email">person or email address</string>
    <string name="instruction_calculate">expression</string>
    <string name="instruction_roll">dice</string>
    <string name="instruction_alarm">time</string>
    <string name="instruction_timer">minutes, duration, or until-time</string>
    <string name="instruction_schedule">event name | DATETIME</string>
    <string name="summary_web">Search the internet</string>
    <string name="summary_launch">Open your apps</string>
    <string name="summary_play">Play songs, playlists, albums, audiobooks, and podcasts</string>
    <string name="summary_pause">Pause media</string>
    <string name="summary_find">Locate files and folders</string>
    <string name="summary_call">Make calls by name or number</string>
    <string name="summary_dial">Make calls by number or phoneword</string>
    <string name="summary_sms">Send text messages</string>
    <string name="summary_contact">View, create, and edit contacts</string>
    <string name="summary_email">Write emails</string>
    <string name="summary_navigate">Search and navigate to locations</string>
    <string name="summary_calculate">Compute math equations</string>
    <string name="summary_roll">Roll virtual dice</string>
    <string name="summary_bits">Compute bitwise equations</string>
    <string name="summary_weather">Open a weather app</string>
    <string name="summary_time">Tell the time</string>
    <string name="summary_alarm">Set alarms</string>
    <string name="summary_timer">Set timers</string>
    <string name="summary_note">Add text to a file</string>
    <string name="summary_notify">Set notification reminders</string>
    <string name="summary_setting">Search and change system settings</string>
    <string name="summary_copy">Copy text and files</string>
    <string name="summary_snippets">Stash text for later use</string>
    <string name="summary_share">Send text, images, and files to your apps</string>
    <string name="summary_torch">Toggle the flashlight</string>
    <string name="summary_info">View application details</string>
    <string name="summary_uninstall">Remove installed apps</string>
    <string name="summary_toast">Show a little message!</string>
    <string name="summary_todo">Add tasks to a todo.txt file</string>
    <string name="summary_pomodoro">Set timers for work and breaks</string>
    <string name="summary_custom">Create your own commands!</string>
</resources>