<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_core">
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_web"
            android:key="web"
            android:summary="@string/summary_web"
            android:title="@string/command_web" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_launch"
            android:key="launch"
            android:summary="@string/summary_launch"
            android:title="@string/command_launch" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_play"
            android:key="play"
            android:summary="@string/summary_play"
            android:title="@string/command_play" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_pause"
            android:key="pause"
            android:summary="@string/summary_pause"
            android:title="@string/command_pause" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_torch"
            android:key="torch"
            android:summary="@string/summary_torch"
            android:title="@string/command_torch" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_find"
            android:key="find"
            android:summary="@string/summary_find"
            android:title="@string/command_find" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_call"
            android:key="call"
            android:summary="@string/summary_call"
            android:title="@string/command_call" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_dial"
            android:key="dial"
            android:summary="@string/summary_dial"
            android:title="@string/command_dial" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_sms"
            android:key="sms"
            android:summary="@string/summary_sms"
            android:title="@string/command_sms" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_contact"
            android:key="contact"
            android:summary="@string/summary_contact"
            android:title="@string/command_contact" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_email"
            android:key="email"
            android:summary="@string/summary_email"
            android:title="@string/command_email" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_navigate"
            android:key="navigate"
            android:summary="@string/summary_navigate"
            android:title="@string/command_navigate" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_calculate"
            android:key="calculate"
            android:summary="@string/summary_calculate"
            android:title="@string/command_calculate" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_random_number"
            android:key="random_number"
            android:summary="@string/summary_random_number"
            android:title="@string/command_random_number" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_roll"
            android:key="roll"
            android:summary="@string/summary_roll"
            android:title="@string/command_roll" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_command"
            android:key="bits"
            android:summary="@string/summary_bits"
            android:title="@string/command_bits" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_weather"
            android:key="weather"
            android:summary="@string/summary_weather"
            android:title="@string/command_weather" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_clock"
            android:key="time"
            android:summary="@string/summary_time"
            android:title="@string/command_time" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_alarm"
            android:key="alarm"
            android:summary="@string/summary_alarm"
            android:title="@string/command_alarm" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_timer"
            android:key="timer"
            android:summary="@string/summary_timer"
            android:title="@string/command_timer" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_note"
            android:key="note"
            android:summary="@string/summary_note"
            android:title="@string/command_note" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_calendar"
            android:key="calendar"
            android:summary="@string/summary_calendar"
            android:title="@string/command_calendar" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_notify"
            android:key="notify"
            android:summary="@string/summary_notify"
            android:title="@string/command_notify" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_settings"
            android:key="setting"
            android:summary="@string/summary_setting"
            android:title="@string/command_setting" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_copy"
            android:key="copy"
            android:summary="@string/summary_copy"
            android:title="@string/command_copy" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_snippets"
            android:key="snippets"
            android:summary="@string/summary_snippets"
            android:title="@string/command_snippets" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_share"
            android:key="share"
            android:summary="@string/summary_share"
            android:title="@string/command_share" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_torch"
            android:key="aliases_torch"
            android:summary="@string/summary_torch"
            android:title="@string/command_torch" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_info"
            android:key="info"
            android:summary="@string/summary_info"
            android:title="@string/command_info" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_uninstall"
            android:key="uninstall"
            android:summary="@string/summary_uninstall"
            android:title="@string/command_uninstall" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_toast"
            android:key="toast"
            android:summary="@string/summary_toast"
            android:title="@string/command_toast" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_custom">
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_todo"
            android:key="todo"
            android:summary="@string/summary_todo"
            android:title="@string/command_todo" />
        <net.emilla.config.CommandPreference
            android:icon="@drawable/ic_pomodoro"
            android:key="pomodoro"
            android:summary="@string/summary_pomodoro"
            android:title="@string/command_pomodoro" />
        <EditTextPreference
            android:icon="@drawable/ic_command"
            android:key="aliases_custom_text"
            android:summary="@string/summary_custom"
            android:title="@string/command_custom" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_apps"
        android:title="@string/category_apps" />
</PreferenceScreen>