<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:defaultValue="WEB"
        app:key="default_command"
        app:title="@string/command_default"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        app:defaultValue="Wikipedia, wiki, w, https://wikipedia.org/wiki/%s\nGoogle, g, https://www.google.com/search?q=%s\nGoogle Images, gimages, gimage, gimg, gi, https://www.google.com/search?q=%s&amp;udm=2\nYouTube, yt, y, https://www.youtube.com/results?search_query=%s\nDuckDuckGo, ddg, dd, d, https://duckduckgo.com/?q=%s\nDuckDuckGo Images, duckimages, duckimage, duckimg, ddgimages, ddgimage, ddgimg, ddgi, ddimages, ddimage, ddimg, ddi, dimages, dimage, dimg, https://duckduckgo.com/?q=%s&amp;ia=images&amp;iax=images"
        app:key="search_engines"
        app:summary="Replace the query with '%s'"
        app:title="Web search engines" />

    <ListPreference
        app:defaultValue="config"
        app:entries="@array/no_command_action_entries"
        app:entryValues="@array/no_command_action_values"
        app:key="action_no_command"
        app:title="@string/pref_action_no_command"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:defaultValue="torch"
        app:entries="@array/action_entries"
        app:entryValues="@array/action_values"
        app:key="action_double_assist"
        app:title="@string/pref_action_double_assist"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:defaultValue="select_all"
        app:entries="@array/action_entries"
        app:entryValues="@array/action_values"
        app:key="action_long_submit"
        app:title="@string/pref_action_long_submit"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        app:defaultValue="help"
        app:entries="@array/action_entries"
        app:entryValues="@array/action_values"
        app:key="action_menu"
        app:title="@string/pref_action_menu"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        app:defaultValue="nebula"
        app:entries="@array/sound_set_entries"
        app:entryValues="@array/sound_set_values"
        app:key="sound_set"
        app:title="@string/pref_sounds"
        app:useSimpleSummaryProvider="true" />
    <Preference
        app:key="chime_start"
        app:title="@string/chime_start" />
    <Preference
        app:key="chime_act"
        app:title="@string/chime_act" />
    <Preference
        app:key="chime_pend"
        app:title="@string/chime_pend" />
    <Preference
        app:key="chime_resume"
        app:title="@string/chime_resume" />
    <Preference
        app:key="chime_exit"
        app:title="@string/chime_exit" />
    <Preference
        app:key="chime_succeed"
        app:title="@string/chime_succeed" />
    <Preference
        app:key="chime_fail"
        app:title="@string/chime_fail" />

    <EditTextPreference
        app:defaultValue="@string/ping_pomodoro_text"
        app:key="pomo_default_work_memo"
        app:title="@string/pref_pomo_default_work" />
    <EditTextPreference
        app:defaultValue="@string/ping_pomodoro_break_text"
        app:key="pomo_default_break_memo"
        app:title="@string/pref_pomo_default_break" />
</androidx.preference.PreferenceScreen>